--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,29 +1,45 @@
 security:
-    #encodage de mot de pass pour User
-    encoders:
-        App\Entity\User:
-            algorithm: bcrypt
+  #encodage de mot de pass pour User
+  encoders:
+    App\Entity\User:
+      algorithm: bcrypt
 
-    # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
-    providers:
-        in_memory: { memory: ~ }
-    firewalls:
-        dev:
-            pattern: ^/(_(profiler|wdt)|css|images|js)/
-            security: false
-        main:
-            anonymous: true
+  # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
+  providers:
+    db:
+      #les utilisateurs sont les entités User
+      entity:
+        class: App\Entity\User
+        #l'identifiant est l'email;
+        property: email
+  firewalls:
+    dev:
+      pattern: ^/(_(profiler|wdt)|css|images|js)/
+      security: false
+    main:
+      anonymous: true
 
-            # activate different ways to authenticate
 
-            # http_basic: true
-            # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
+      form_login:
 
-            # form_login: true
-            # https://symfony.com/doc/current/security/form_login_setup.html
+        # route du formulaire de login
+        login_path: app_security_login
+        check_path: app_security_login
+      logout:
+        #route définie dans config/route.yaml
+        path: app_security_logout
+        #route de la redirection après déconnexion
+        target: app_index_index
+      # Provider défini au dessus dans la rebrique provider
+      provider: db
+      #sur tout le site
+      pattern: ^/
 
-    # Easy way to control access for large sections of your site
-    # Note: Only the *first* access control that matches will be used
-    access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+
+      # https://symfony.com/doc/current/security/form_login_setup.html
+
+  # Easy way to control access for large sections of your site
+  # Note: Only the *first* access control that matches will be used
+  access_control:
+      - { path: ^/admin, roles: ROLE_ADMIN }
+  # - { path: ^/profile, roles: ROLE_USER }
